--- a/body_tracking.ipynb
+++ b/body_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -11,6 +11,39 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture('video/7.mp4')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ret, img = cap.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "img.shape"
    ]
   },
   {
@@ -66,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -74,32 +107,6 @@
    "source": [
     "import cv2\n",
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "bgs = cv2.BackgroundSubtractorMOG2()\n",
-    "capture = cv2.VideoCapture(0)\n",
-    "cv2.namedWindow(\"Original\",1)\n",
-    "cv2.namedWindow(\"Foreground\",1)\n",
-    "while True:\n",
-    "#     img = capture.read()[1]\n",
-    "    ret, img = capture.read()\n",
-    "#     cv2.imshow(\"Original\",img)\n",
-    "    fgmask = bgs.apply(img)\n",
-    "    foreground = cv2.bitwise_and(img,img,mask=fgmask)\n",
-    "    cv2.imshow(\"Foreground\",foreground)\n",
-    "#     k = cv2.waitKey(30) & 0xff\n",
-    "    if cv2.waitKey >= 27:\n",
-    "        cv2.destroyAllWindows()\n",
-    "        capture.release()"
    ]
   }
  ],
